--- a/withGraph/BelmanFord/style.css
+++ b/withGraph/BelmanFord/style.css
@@ -62,11 +62,30 @@
 #rightInfo{
     height: 100vh;
     overflow-y: scroll;
-    background:#2D5789;
+    background: rgb(238, 238, 238);
     padding:30px;
     
 }
 #mainInfo{
     padding: 0px;
-    background: #272822;
+    background: rgb(51,51,51);
+}
+
+/* Style de base de la table */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid #ddd;
+}
+
+/* Style des en-têtes de colonne */
+th {
+  padding: 8px;
+  border: 1px solid #ddd;
+}
+
+/* Style des cellules de données */
+td {
+  padding: 8px;
+  border: 1px solid #ddd;
 }
